--- a/src/views/Search/Search.css
+++ b/src/views/Search/Search.css
@@ -36,7 +36,7 @@ a{text-decoration: none;color: #027de7;}
 .cvesearchcenter .MuiPagination-root ul li{display: inline-block;}
 
 
-.boxdetailhead .boxtitlecontent .niahmeter{display: flex;margin-bottom: -55px;}
+.boxdetailhead .boxtitlecontent .meter{display: flex;margin-bottom: -55px;}
 
 .cvesearchleft .boxleftheader > div{margin-bottom: 15px;}
 .cvesearchremote .cvesearchremote-inner{box-shadow: 0 0 0 1px rgba(63,63,68,0.05), 0 1px 2px 0 rgba(63,63,68,0.15);border-radius: 6px;padding: 15px 24px;}
@@ -61,8 +61,8 @@ a{text-decoration: none;color: #027de7;}
 .scoretitle{border: 1px solid #d0d8e5;border-radius: 3px 0 0 3px; color: #333;}
 
 
-.niahmeterleft h2{font-size: 16px;font-weight: 600;margin-bottom: 10px;}
-.niahmeterleft h2 a{text-decoration: none;color: #e43838} 
+.meterleft h2{font-size: 16px;font-weight: 600;margin-bottom: 10px;}
+.meterleft h2 a{text-decoration: none;color: #e43838} 
 
 .boxtitlecontent .niahinsightlist .MuiListItem-gutters{padding: 0px 0 15px 0;}
 .boxtitlecontent .niahinsightlist .MuiListItem-gutters:last-child{padding-bottom: 0;}
@@ -115,7 +115,7 @@ td.MuiTableCell-root.MuiTableCell-body.loading-cell {
 .cvesearchleft .MuiTypography-h3,.boxdetailtitle h2{font-size: 16px;}
 
 .cvesearchleft .MuiListItem-root .MuiListItemText-root .MuiTypography-body1{font-size: 16px;}
-.niahmeterleft h2,.niahinsightlist .MuiTypography-displayBlock,.snapshotlist .MuiTypography-root > div,.boxtitlecontent.explo-list .MuiExpansionPanelSummary-content h2{font-size: 14px;}
+.meterleft h2,.niahinsightlist .MuiTypography-displayBlock,.snapshotlist .MuiTypography-root > div,.boxtitlecontent.explo-list .MuiExpansionPanelSummary-content h2{font-size: 14px;}
 .MuiExpansionPanelSummary-root{padding: 0px 15px;}
 .scoreblock-inner > div{font-size: 12px;}
 
