--- a/src/App.css
+++ b/src/App.css
@@ -210,6 +210,18 @@ button:focus{
     top: 2px;
     right: -8px;
 }
+
+
+.account-image-block{position: relative;}
+.account-image-block .camera-icon{position: absolute;top: 50%;transform: translate(-50%,-50%);-webkit-transform: translate(-50%,-50%);-ms-transform: translate(-50%,-50%); left: 50%;z-index: 1;opacity: 0;transition: all ease 0.5s;-webkit-transition: all ease 0.5s;-ms-transition: all ease 0.5s;}
+
+.camera-icon svg{fill: #fff;font-size: 45px;} 
+
+.account-image-block:hover .camera-icon{opacity: 1;}
+.upload-image{position: relative;cursor: pointer;}
+.upload-image:after{position: absolute;content: "";background:rgba(0,0,0,0.5);top: 0;bottom: 0;left: 0;right: 0;border-radius: 100%;opacity: 0;  }
+.account-image-block:hover .upload-image:after{opacity: 1;} 
+
 @media(min-width:767px) and (max-width:959px){
   .bannerBox .bannerContent{
     max-width:100%;
