--- a/src/views/Vuldb/Vuldb.css
+++ b/src/views/Vuldb/Vuldb.css
@@ -100,6 +100,30 @@ width:100% !important;
 .vuldb-front [class*='makeStyles-chipbar'] > .MuiGrid-container{border: 1px solid #e8e8f2;border-radius: 5px;margin-bottom:30px;}
 .vuldb-front ul li .MuiChip-deletable{background: #556177;border-radius: 5px; }
 
+.vuldb-front .small-table .MuiTableCell-body, .vuldb-front .big-table .MuiTableCell-body { 
+	white-space: pre-line; 
+	font-size: 14px !important;
+    font-weight: 500 !important;
+} 
+
+.vuldb-front table { table-layout: fixed;}
+
+.vuldb-front table.small-table tr th:nth-child(n+4) {
+	display: none;
+}
+.vuldb-front table.small-table tr td:nth-child(n+4) {
+	display: none;
+}
+.vuldb-front table.small-table tr td:nth-last-child(-n+1) {
+	display: block;
+}
+
+
+.vuldb-front table.small-table th:nth-last-child(-n+1) {
+	display: block !important;
+}
+
+
 @media only screen and (min-width:1700px){
 
 .vuldb-front .cvesearchcenter .MuiTableCell-root{padding: 20px}
