--- a/src/App.css
+++ b/src/App.css
@@ -222,6 +222,8 @@ button:focus{
 .upload-image:after{position: absolute;content: "";background:rgba(0,0,0,0.5);top: 0;bottom: 0;left: 0;right: 0;border-radius: 100%;opacity: 0;  }
 .account-image-block:hover .upload-image:after{opacity: 1;} 
 
+.login-logo-bedge + span.MuiBadge-badge{right: -25px;top: -5px;}
+
 @media(min-width:767px) and (max-width:959px){
   .bannerBox .bannerContent{
     max-width:100%;
