--- a/src/views/ProjectsReports/ProjectsReports.css
+++ b/src/views/ProjectsReports/ProjectsReports.css
@@ -121,7 +121,8 @@ width:100% !important;
 
 
 .scan-report-list .cveresult .cvesearchcenter .MuiTableRow-root.MuiTableRow-hover:hover{background: #F6F8FA;}
-.scan-report-list .cveresult table tr th,.scan-report-list .cveresult table tr td{font-size: 15px !important;font-weight: 500 !important;padding: 10px 20px !important;border-bottom: 1px solid #e1e4e8 !important;}
+.scan-report-list .cveresult table tr th{font-size: 15px !important;font-weight: 500 !important;padding: 20px 20px !important;border-bottom: 1px solid #e1e4e8 !important;}
+.scan-report-list .cveresult table tr td{font-size: 12px !important;font-weight: 500 !important;padding: 5px 20px !important;border-bottom: 1px solid #e1e4e8 !important;}
 .scan-report-list .cveresult table tr td h5{font-size: 15px !important;font-weight: 500 !important;color: #000}
 .scan-report-list .cveresult .cvesearchcenter .MuiTableRow-root.MuiTableRow-hover:hover .MuiTypography-h5{color: #000;}
 .scan-report-list .cveresult .cvesearchcenter .MuiTableRow-root.MuiTableRow-hover:hover .MuiTableCell-root{color: #263238;}
@@ -175,7 +176,7 @@ width:100% !important;
 .scan-report-list .cvesearchright-inner > [class*='MuiBox-root']:last-child .snapshotlist li span.MuiListItemText-primary > .snapshot-content{max-width: 30%;flex-basis: 30%; align-self: center; font-size: 15px;word-break: break-all;}
 
 .scan-report-list .MuiContainer-root > .MuiGrid-container{box-shadow: 4px 0px 54px rgba(0,0,0,0.1);padding: 0px 0px;border-radius: 5px;}
-.scan-report-list .MuiContainer-root > .MuiGrid-container > .MuiContainer-root{max-width: 100%;box-shadow: none;border-radius: 0;padding: 35px;}
+.scan-report-list .MuiContainer-root > .MuiGrid-container > .MuiContainer-root{max-width: 100%;box-shadow: none;border-radius: 0;padding: 15px 35px 25px 35px;}
 
 .scan-report-list [class*='makeStyles-searchBox'] {max-width: 100%;border-radius: 5px;box-shadow: none;}
 .scan-report-list .MuiInput-formControl.MuiInput-underline::before,.scan-report-list .MuiInput-formControl.MuiInput-underline::after {display: none;}
@@ -190,9 +191,13 @@ width:100% !important;
 
 .projectdetails-div .Name {font-size: 15px;font-weight: bold;}
 
+.scan-report-list .MuiCardHeader-root {
+	padding: 0px 16px;
+}
+
 @media only screen and (min-width:1700px){
 
-.scan-report-list .cvesearchcenter .MuiTableCell-root{padding: 15px}
+.scan-report-list .cvesearchcenter .MuiTableCell-root{padding: 8px}
 .scan-report-list td.MuiTableCell-root.MuiTableCell-body.loading-cell {
     padding: 0px 5px;
 }
