--- a/src/App.css
+++ b/src/App.css
@@ -222,7 +222,12 @@ button:focus{
 .upload-image:after{position: absolute;content: "";background:rgba(0,0,0,0.5);top: 0;bottom: 0;left: 0;right: 0;border-radius: 100%;opacity: 0;  }
 .account-image-block:hover .upload-image:after{opacity: 1;} 
 
-.login-logo-bedge + span.MuiBadge-badge{right: -25px;top: -5px;}
+.login-logo-bedge + span.MuiBadge-badge,.dashboard-logo + span.MuiBadge-badge{right: -25px;top: -5px;}
+
+
+.MuiGrid-spacing-xs-3 > .MuiGrid-item {
+    padding: 10px !important;
+}
 
 @media(min-width:767px) and (max-width:959px){
   .bannerBox .bannerContent{
