--- a/src/views/reports/DashboardView/index.css
+++ b/src/views/reports/DashboardView/index.css
@@ -2,6 +2,7 @@
 .rounded-dashboard{
   padding: 30px;
   font-weight: 600;
+  float: right;
 }
 .rounded-color-0{
   color: #fff;
@@ -52,8 +53,12 @@
 .open_vulnerabilities [class*='MuiFormControl-root']{border: 1px solid #c5c5c5;padding: 5px 10px;border-radius: 50px;}
 .open_vulnerabilities [class*='MuiFormControl-root'] [class*='MuiInputBase-root']:before,.open_vulnerabilities [class*='MuiFormControl-root'] [class*='MuiInputBase-root']::after{display: none;}
 .open_vulnerabilities table tr:hover{background: #F6F8FA;}
-.open_vulnerabilities table tr th,.open_vulnerabilities table tr td{font-size: 15px !important;font-weight: 400 !important;padding: 10px 20px !important;}
+.open_vulnerabilities table tr th{font-size: 15px !important;font-weight: 600 !important;padding: 10px 20px !important;}
+.open_vulnerabilities table tr td{font-size: 15px !important;font-weight: 400 !important;padding: 10px 20px !important;}
 .open_vulnerabilities table tr th{border-bottom: 1px solid #e1e4e8 !important;background: none;}
 
 .ReactVirtualized__List > div{max-width: 100% !important;width: 100% !important;height: auto !important;display: table;}
 
+.dashboardtitle .MuiOutlinedInput-input{
+  padding: 10px 30px 10px 14px;
+}
