--- a/src/layouts/DashboardLayout/index.css
+++ b/src/layouts/DashboardLayout/index.css
@@ -66,3 +66,6 @@ right: 0px;content: "";}
   font-size: 16px !important;
   font-weight: 600;
 }
+.scrollbar-container .logo-beta {
+  display: none;
+}
