--- a/src/views/Vuldb/Vuldb.css
+++ b/src/views/Vuldb/Vuldb.css
@@ -123,10 +123,70 @@ width:100% !important;
 	display: block !important;
 }
 
+.vuldb-front .cveresult .b-scoreblock-severity-div {
+    display: flex;
+    justify-content: end;
+}
+.vuldb-front .cveresult .b-scoreblock-severity-div > div {
+    padding: 0 0 0 5px;
+}
+.vuldb-front .b-scoreblock-severity-div div {
+    margin: 0px !important;
+}
+.vuldb-front .b-scoreblock-severity-div .scoreblock,.vuldb-front .b-scoreblock-severity-div .scoreblock {
+    float: left;
+    margin: 0 0px;
+}
+
+.vuldb-front .cveresult table tr td .b-scoreblock-severity-div .HIGH .b-scoreblock-inner {
+    border-color: red;
+}
+
+.vuldb-front .cveresult table tr td .b-scoreblock-severity-div .b-scoreblock-inner {
+    border: 1px solid;
+    border-radius: 5px;
+}
+
+.vuldb-front .b-scoreblock-severity-div .HIGH .b-scoreblock-inner {
+    border-color: red;
+}
+
+.vuldb-front .b-scoreblock-severity-div div {
+    margin: 0px !important;
+}
+.vuldb-front .cveresult table tr td .b-scoreblock-severity-div .b-scoreblock-inner > div {
+    min-height: 22px;
+    font-size: 12px;
+    padding: 3px 5px;
+    border: 0;
+}
+
+.vuldb-front .b-scoreblock-inner > div {
+    display: block;
+    vertical-align: middle;
+    padding: 5px;
+    font-size: 14px;
+    font-weight: 600;
+    text-align: center;
+}
+.vuldb-front .b-scorevalue {
+    color: #fff;
+    border-radius: 0px 3px 3px 0px;
+    border-right: 1px solid #d0d8e5;
+    border-bottom: 1px solid #d0d8e5;
+    border-top: 1px solid #d0d8e5;
+}
+
+.vuldb-front .cveresult table tr td {
+    font-size: 12px !important;
+    font-weight: 500 !important;
+    padding: 5px 20px !important;
+    border-bottom: 1px solid #e1e4e8 !important;
+}
 
 @media only screen and (min-width:1700px){
 
-.vuldb-front .cvesearchcenter .MuiTableCell-root{padding: 8px}
+/*.vuldb-front .cvesearchcenter .MuiTableCell-root{padding: 8px}*/
 .vuldb-front td.MuiTableCell-root.MuiTableCell-body.loading-cell {
     padding: 0px 5px;
 }
