--- a/src/views/VuldbLogin/VuldbLogin.css
+++ b/src/views/VuldbLogin/VuldbLogin.css
@@ -141,6 +141,31 @@ width:100% !important;
     padding-bottom: 5px;
 }
 
+.vuldb-login .cvesearchright .view-more-btn {
+	width: 100%;
+    font-size: 17px;
+    color: #333;
+    font-weight: 600;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.vuldb-login .cvesearchright .view-more-btn a {
+    background: #185d98;
+    text-decoration: none;
+    display: inline-block;
+    padding: 12px 20px;
+    color: #fff;
+    border: 2px solid #185d98;
+    line-height: 1;
+    font-family: "Montserrat",sans-serif !important;
+}
+
+.vuldb-login .cvesearchright .view-more-btn {
+    text-align: center;
+    margin-top: 0px;
+}
+
 @media only screen and (min-width:1700px){
 
 .vuldb-login .cvesearchcenter .MuiTableCell-root{padding: 0px 10px;}
